# dbt-spec-kit

./: .gitignore  BUILD-SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  FOLLOWUP.md  HANDOFF.md  PLAN.md  QUESTIONS.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: dbt-architect.md  governance-reviewer.md  implementation-agent.md  review-agent.md  spec-steward.md  warehouse-optimizer.md
commands/: dbt.analyze.md  dbt.implement-all.md  dbt.implement.md  dbt.plan.md  dbt.review.md  dbt.specify.md  dbt.tasks.md
docs/: brownfield-onboarding.md  ears-cheatsheet.md  enterprise-ci.md  getting-started.md  jaffle-shop-ai-sdlc-walkthrough.md  methodology.md  releasing.md  skills-and-sub-agents.md  spec-retention-and-repo-hygiene.md  team-onboarding-playbook.md  v1-enterprise-release.md
docs/integrations/: confluence.md  jira.md
docs/tutorials/: 01-initialize-a-dbt-repo.md  02-jaffle-shop-change.md  03-brownfield-enterprise-adoption.md  04-skills-and-sub-agent-handoffs.md  05-jira-to-spec-workflow.md  06-confluence-context-workflow.md  README.md
docs/warehouse-guides/: athena.md  azure-sql.md  bigquery.md  databricks.md  duckdb.md  motherduck.md  mysql.md  postgres.md  redshift.md  snowflake.md  sqlserver.md  trino.md
examples/enterprise-customer-360/: ci-report.md  plan.md  spec.md  tasks.md
examples/jaffle-shop-staging-overhaul/: implementation-summary.md  plan.md  spec.md  tasks.md
memory/: constitution.md
presets/athena/: constitution-additions.md  plan-additions.md
presets/athena/skills/athena-partition-file-layout-decisions/: SKILL.md
presets/azure-sql/: constitution-additions.md  plan-additions.md
presets/azure-sql/skills/azure-sql-service-tier-decisions/: SKILL.md
presets/bigquery/: constitution-additions.md  plan-additions.md
presets/bigquery/skills/bigquery-partitioning-decisions/: SKILL.md
presets/databricks/: constitution-additions.md  plan-additions.md
presets/databricks/skills/databricks-liquid-clustering-decisions/: SKILL.md
presets/duckdb/: constitution-additions.md  plan-additions.md
presets/duckdb/skills/duckdb-local-analytics-decisions/: SKILL.md
presets/motherduck/: constitution-additions.md  plan-additions.md
presets/motherduck/skills/motherduck-collaboration-decisions/: SKILL.md
presets/mysql/: constitution-additions.md  plan-additions.md
presets/mysql/skills/mysql-oltp-safe-analytics-decisions/: SKILL.md
presets/postgres/: constitution-additions.md  plan-additions.md
presets/postgres/skills/postgres-index-materialization-decisions/: SKILL.md
presets/redshift/: constitution-additions.md  plan-additions.md
presets/redshift/skills/redshift-dist-sort-decisions/: SKILL.md
presets/snowflake/: constitution-additions.md  plan-additions.md
presets/snowflake/skills/snowflake-clustering-decisions/: SKILL.md
presets/sqlserver/: constitution-additions.md  plan-additions.md
presets/sqlserver/skills/sqlserver-index-and-incremental-decisions/: SKILL.md
presets/trino/: constitution-additions.md  plan-additions.md
presets/trino/skills/trino-federated-query-patterns/: SKILL.md
skills/capturing-project-conventions/: SKILL.md
skills/reviewing-ac-traceability/: SKILL.md
skills/reviewing-ci-evidence/: SKILL.md
skills/reviewing-pii-access-governance/: SKILL.md
skills/writing-business-glossary-specs/: SKILL.md
skills/writing-mart-specs-with-grain/: SKILL.md
skills/writing-staging-model-specs/: SKILL.md
src/dbt_specify/: __init__.py  __main__.py  _version.py  cli.py  confluence.py  dbt_artifacts.py  doctor.py  ears.py  init.py  jira.py  lifecycle.py  reporting.py  templates_loader.py  validate.py
templates/: CLAUDE.md.template  plan-template.md  retro-template.md  spec-template.md  tasks-template.md
templates/ci/: github-actions-dbt-specify.yml
tests/: conftest.py  test_confluence.py  test_dbt_artifacts.py  test_docs.py  test_ears.py  test_init.py  test_jira.py  test_lifecycle.py  test_validate.py
tests/fixtures/: invalid_spec_non_ears.md  valid_spec.md
tests/fixtures/minimal_dbt_project/: dbt_project.yml
